logs/rocket_aeo-agent-697f4cd676-vqqrq_POD_GET.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-04-24T18:26:17Z"
  generateName: aeo-agent-697f4cd676-
  labels:
    app: aeo-agent
    pod-template-hash: 697f4cd676
  name: aeo-agent-697f4cd676-vqqrq
  namespace: rocket
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: aeo-agent-697f4cd676
    uid: cc7c05b2-d8c4-4799-855c-89eb98243f18
  resourceVersion: "2694"
  uid: 41250482-60bc-4914-903c-70b6f9b6418f
spec:
  containers:
  - image: localhost:5000/aeo/agent:4.3.1.58
    imagePullPolicy: IfNotPresent
    name: aeo-agent
    ports:
    - containerPort: 7913
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/aeo/data
      name: pvc-aeo-agent-config
    - mountPath: /opt/aeo/agent/xagent_1
      name: pvc-aeo-agent-services
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mpd9b
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: aeo-agent
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: pvc-aeo-agent-config
    persistentVolumeClaim:
      claimName: pvc-aeo-agent-config
  - name: pvc-aeo-agent-services
    persistentVolumeClaim:
      claimName: pvc-aeo-agent-services
  - name: kube-api-access-mpd9b
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  phase: Pending
  qosClass: BestEffort
