logs/rocket_aeo-agent_SERVICE_GET.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: aeo-rocket
    meta.helm.sh/release-namespace: rocket
  creationTimestamp: "2023-04-25T16:57:45Z"
  labels:
    app: aeo-agent
    app.kubernetes.io/managed-by: Helm
  name: aeo-agent
  namespace: rocket
  resourceVersion: "1000"
  uid: 9777ff86-4100-4c8b-81d8-4df99288bdb1
spec:
  clusterIP: 10.43.181.142
  clusterIPs:
  - 10.43.181.142
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: "7913"
    nodePort: 32720
    port: 7913
    protocol: TCP
    targetPort: 7913
  selector:
    app: aeo-agent
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
