logs/rocket_aeo-clientmgr-58d8cd466b-v5l5b_POD_GET.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-04-24T18:26:17Z"
  generateName: aeo-clientmgr-58d8cd466b-
  labels:
    app: aeo-clientmgr
    pod-template-hash: 58d8cd466b
  name: aeo-clientmgr-58d8cd466b-v5l5b
  namespace: rocket
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: aeo-clientmgr-58d8cd466b
    uid: c9b27150-e36f-4d35-b02e-cbb69ef2a5b0
  resourceVersion: "2808"
  uid: 4d03b9f3-9134-4ece-9df9-66ff843ac1a0
spec:
  containers:
  - env:
    - name: DB_DRIVER
      value: org.postgresql.Driver
    - name: DB_TYPE
      value: POSTGRESQL
    - name: DB_URL
      value: jdbc:postgresql://postgresql:5432/aeo
    - name: DB_NAME
      value: aeo
    - name: DB_SERVER
      value: postgresql
    - name: DB_USER
      value: aeo
    - name: DB_PASSWORD
      value: 3X6ApGn/D3cgkTxc730BGhvV6C6A6YPfGare9QjWgdT5rkI9wCWWFRvfYk1f5PXqN
    - name: PORT
      value: "7980"
    image: localhost:5000/aeo/clientmgr:4.3.1.61
    imagePullPolicy: IfNotPresent
    name: aeo-clientmgr
    ports:
    - containerPort: 7980
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/aeo/data
      name: pvc-aeo-clientmgr
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-qzhmw
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: aeo-clientmgr
  nodeName: k3d-rocket-agent-1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: pvc-aeo-clientmgr
    persistentVolumeClaim:
      claimName: pvc-aeo-clientmgr
  - name: kube-api-access-qzhmw
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:23Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:24Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:24Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:23Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://bb45c4113e5ef1927eb895f60dc8e5c0eb6eaa30efbb4458a697dfb5ed504f48
    image: localhost:5000/aeo/clientmgr:4.3.1.61
    imageID: localhost:5000/aeo/clientmgr@sha256:7eec66c3db471335531138e2708db3bffe6b1bfdeff3e4ebf79a081cc2b59b0e
    lastState: {}
    name: aeo-clientmgr
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-04-24T18:26:23Z"
  hostIP: 172.19.0.5
  phase: Running
  podIP: 10.42.2.16
  podIPs:
  - ip: 10.42.2.16
  qosClass: BestEffort
  startTime: "2023-04-24T18:26:23Z"
