logs/rocket_aeo-clientmgr_INGRESS_GET.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: aeo-rocket
    meta.helm.sh/release-namespace: rocket
    nginx.ingress.kubernetes.io/app-root: /aeo
  creationTimestamp: "2023-04-25T16:57:45Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: aeo-clientmgr
  namespace: rocket
  resourceVersion: "1161"
  uid: 24e9aae9-8fd6-4a5e-a619-555f2912a3af
spec:
  ingressClassName: nginx
  rules:
  - host: aeo.rocketsoftware.com
    http:
      paths:
      - backend:
          service:
            name: aeo-clientmgr
            port:
              number: 7980
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.27.0.3
    - ip: 172.27.0.4
    - ip: 172.27.0.5
