logs/rocket_aeo-clientmgr_SERVICE_GET.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: aeo-rocket
    meta.helm.sh/release-namespace: rocket
  creationTimestamp: "2023-06-28T13:09:48Z"
  labels:
    app: aeo-clientmgr
    app.kubernetes.io/managed-by: Helm
  name: aeo-clientmgr
  namespace: rocket
  resourceVersion: "919"
  uid: 20fd8ff7-a56b-4698-8c75-6d21191eddc1
spec:
  clusterIP: 10.43.27.84
  clusterIPs:
  - 10.43.27.84
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: aeo-web
    port: 7980
    protocol: TCP
    targetPort: 7980
  - name: "7911"
    port: 7911
    protocol: TCP
    targetPort: 7911
  selector:
    app: aeo-clientmgr
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
