logs/rocket_aeo-scheduler-578556c5b8-k2bzp_POD_GET.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-04-24T18:26:17Z"
  generateName: aeo-scheduler-578556c5b8-
  labels:
    app: aeo-scheduler
    pod-template-hash: 578556c5b8
  name: aeo-scheduler-578556c5b8-k2bzp
  namespace: rocket
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: aeo-scheduler-578556c5b8
    uid: 0936a604-fa36-4703-b821-e182b8fd1ed0
  resourceVersion: "2797"
  uid: cda833a7-23bf-423f-a9f9-3848152b6c85
spec:
  containers:
  - env:
    - name: DB_DRIVER
      value: org.postgresql.Driver
    - name: DB_TYPE
      value: POSTGRESQL
    - name: DB_URL
      value: jdbc:postgresql://postgresql:5432/aeo
    - name: DB_NAME
      value: aeo
    - name: DB_SERVER
      value: postgresql
    - name: DB_USER
      value: aeo
    - name: DB_PASSWORD
      value: 3X6ApGn/D3cgkTxc730BGhvV6C6A6YPfGare9QjWgdT5rkI9wCWWFRvfYk1f5PXqN
    - name: PORT
      value: "7910"
    image: localhost:5000/aeo/scheduler:4.3.1.61
    imagePullPolicy: IfNotPresent
    name: aeo-scheduler
    ports:
    - containerPort: 7910
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/aeo/data
      name: pvc-aeo-scheduler
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-8cvr8
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: aeo-scheduler
  nodeName: k3d-rocket-agent-0
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: pvc-aeo-scheduler
    persistentVolumeClaim:
      claimName: pvc-aeo-scheduler
  - name: kube-api-access-8cvr8
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:22Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:23Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:23Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-04-24T18:26:22Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://b79e94adf387f4ecb736920d19f6de06b19c3aa096076f0833f665cc6a98c138
    image: localhost:5000/aeo/scheduler:4.3.1.61
    imageID: localhost:5000/aeo/scheduler@sha256:7dbf9f785d97b3539e86904abf6847d44af1e99b9eeb8f228da525073bb34dca
    lastState: {}
    name: aeo-scheduler
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-04-24T18:26:22Z"
  hostIP: 172.19.0.4
  phase: Running
  podIP: 10.42.1.14
  podIPs:
  - ip: 10.42.1.14
  qosClass: BestEffort
  startTime: "2023-04-24T18:26:22Z"
